Here are the fixed changes with extra spacing removed between partners and larger images

--- a/iwd-app/public/styles.css
+++ b/iwd-app/public/styles.css
@@ -603,6 +603,11 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -709,6 +714,21 @@ code {
 }
 
 @media (min-width: 640px) {
+  .sm\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .sm\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .sm\:my-5 {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
