--- a/iwd-app/src/components/partners-section/partners.css
+++ b/iwd-app/src/components/partners-section/partners.css
@@ -33,7 +33,7 @@ margin-top: -1px;
 .LittleCaesars{
  
   width: auto;
-  height: 110px;
+  height: 150px;
   transition: transform 0.3s ease;
   margin-top: -1px;
   }
@@ -41,7 +41,7 @@ margin-top: -1px;
 .NSBE{
 
 width: auto;
-height: 110px;
+height: 180px;
 transition: transform 0.3s ease;
 margin-top: -1px;
 }
